# logref

./: .codespellrc  .dockerignore  .gitignore  .housekeeping.toml  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.github/: dependabot.yml
.github/workflows/: auto-update-pr-branches.yml  ci.yml  housekeeping.yml  straitjacket.yml  vale.yml
crates/logref-core/: Cargo.toml
crates/logref-core/src/: lib.rs  scan.rs
crates/logref-extract/: Cargo.toml
crates/logref-extract/src/: lib.rs  main.rs
crates/logref-scan/: Cargo.toml
crates/logref-scan/examples/: bench.rs  bench_trigram.rs
crates/logref-scan/src/: main.rs
crates/logref-scan/tests/: resolve.rs
crates/logref-scan/tests/fixtures/: sites.jsonl
crates/logref-schema/: .gitignore  Cargo.toml
crates/logref-schema/src/: lib.rs
crates/logref-wasm/: .gitignore  Cargo.toml  README.md  scan.parity.test.ts  smoke.test.ts
crates/logref-wasm/bench/: .gitignore  README.md  build.sh  drive.ts  gen-catalog.ts  index.html  site-entry.ts
crates/logref-wasm/src/: binding.rs  core_impl.rs  lib.rs  packed.rs
notes/: design.md
reproducers/: README.md  catalog_join.py  contrib-caps.sh  coverage-report.md  coverage.py  env-coverage.py  env-run.sh  frontend-coverage.py  frontend-run.sh  lib.sh  repl-run.sh  reproduced-sites.json  run.sh  sql-caps.sh
reproducers/base/: Dockerfile  logging.conf
reproducers/env/: Dockerfile  entrypoint.sh
reproducers/scenarios/: 00_setup.sql  01_parser_syntax.sql  02_types_input.sql  03_types_range_cast.sql  04_constraints.sql  05_catalog.sql  06_ddl_duplicate.sql  07_acl.sql  08_json.sql  09_datetime.sql  10_strings_regex.sql  11_query_semantics.sql  12_numeric_math.sql  13_arrays_rows.sql  14_txn_session.sql  15_types_extended.sql  16_datetime_extended.sql  17_strings_format_regex.sql  18_arrays_ranges_composite.sql  19_json_sqljson.sql  20_network_geo_enum_ts_xml.sql  21_ddl_objects.sql  22_system_admin_funcs.sql  23_query_semantics_extended.sql  24_txn_copy_cursor.sql  25_ddl_objects_more.sql  26_roles_acl_plpgsql.sql  27_alter_table.sql  28_typecmds_domain_comment.sql  29_func_index_extension_ddl.sql  30_plpgsql_runtime.sql  30_type_io_numeric_int.sql  31_createtable_view_trigger.sql  31_type_io_datetime.sql  32_adt_arithmetic_overflow.sql  32_type_io_net_geo_bit.sql  33_grant_roles_coerce_dml.sql  33_type_io_json_range_misc.sql  34_guc_vacuum_copy_xml.sql  35_ddl_object_lifecycle.sql  (+31 more)
schema/: api.json  catalog.json
scripts/: build-wasm-web.sh  coverage.sh  dev.sh  gen.sh
site/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  biome.json  fly.toml  index.html  nginx.conf  package.json  tsconfig.json  wrangler.toml
site/reference/: README.md
site/reference/messages/: 0-must-be-ahead-of-pr.md  1-can-only-be-used-in-non-interactive-mode.md  9-must-be-ahead-of-pr.md  a-backup-is-already-in-progress-in-this-session.md  a-column-definition-list-is-only-allowed-for-functions-returning-record.md  a-column-definition-list-is-redundant-for-a-function-returning-a-named.md  a-column-definition-list-is-redundant-for-a-function-with-out-parameters.md  a-column-definition-list-is-required-for-functions-returning-record.md  a-hash-partitioned-table-may-not-have-a-default-partition.md  a-hypothetical-set-aggregate-must-have-direct-arguments-matching-its-aggregated.md  a-negative-integer-value-cannot-be-specified-for.md  a-negative-number-raised-to-a-non-integer-power-yields-a-complex-result.md  a-non-read-only-serializable-transaction-cannot-import-a-snapshot-from-a-read.md  a-null-isnull-pointer-was-passed.md  a-serializable-transaction-cannot-import-a-snapshot-from-a-non-serializable.md  a-snapshot-importing-transaction-must-have-isolation-level-serializable-or.md  a-snapshot-importing-transaction-must-not-be-read-only-deferrable.md  a-target-detail-is-not-permitted-because-the-configured-command-does-not.md  a-target-detail-is-required-because-the-configured-command-includes-d.md  a-variadic-ordered-set-aggregate-must-use-variadic-type-any.md  a-worker-process-died-unexpectedly.md  aborting-because-lock-on-relation-is-not-available.md  aborting-because-of-server-version-mismatch.md  absolute-path-not-allowed.md  access-method-already-exists.md  access-method-does-not-exist.md  access-method-does-not-support-asc-desc-options.md  access-method-does-not-support-exclusion-constraints.md  access-method-does-not-support-included-columns.md  (+3904 more)
site/src/: build.ts  frontmatter.ts  index.ts  lower.test.ts  lower.ts  markdown.ts  packed.test.ts  packed.ts  patterns.ts  prefix.test.ts  prefix.ts  render.test.ts  render.ts  scan.ts  scanner.test.ts  scanner.ts  scanwasm.test.ts  search.test.ts  search.ts  severity.ts  style.css  wasmHost.ts  wasmScanner.ts
snippets/: pg-catalog-sample.jsonl  sample-log-sites.jsonl  sample-log-sites.txt  semgrep-rules.yml
(+1 files in other folders)
